[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61.2",
]

[project]
name = "web-py"
description = "web.py: makes web apps"
readme = {file = "README.md", content-type = "text/plain"}
license = {text = "Public domain"}
maintainers = [{name = "Anand Chitipothu", email = "anandology@gmail.com"}]
authors = [{name = "Aaron Swartz", email = "me@aaronsw.com"}]
requires-python = ">=3.7"
classifiers = [
    "License :: Public Domain",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = [
  "version",
]
dependencies = [
  "cheroot",
]
[project.urls]
Homepage = "http://webpy.org/"
Source = "https://github.com/webpy/webpy"

[tool.setuptools]
packages = ["web", "web.contrib"]
platforms = ["any"]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "web.__version__"}

[tool.black]
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | docs/conf.py
)
'''

[tool.codespell]
ignore-words-list = "asend,gae"
skip = ["./.*"]

[tool.ruff]
select = [
  "C9",
  "E",
  "F",
  "I",
  "PLC",
  "PLE",
  "UP",
  "W",
]
ignore = [
  "E722",
  "E731",
  "F821",
  "PLC1901",
]
line-length = 477
show-source = true
target-version = "py37"

[tool.ruff.mccabe]
max-complexity = 26
